--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <h1 class="self-care">✨Self Care Center✨</h1>
   </head>
   <body>
-  
+    <h2>What type of message?</h2>
+    <section class="message-type">
+      <form>
+        <input type="radio" name="affrimation" value="affrimation">
+        <label for="affrimation">affrimation</label>
+        <input type="radio" name="mantra" value="mantra">
+        <label for="mantra">mantra</label>
+        <button type="button" class="receive-message">Receive message</button>
+      </form>
+    </section>
+    <section class="message-box">
+      <img src="./assets/meditate.svg" alt="Yellow person meditating">
+    </section>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
