Add the ability to remove message and return logo

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             </div>
           </div>
             <button type="button" class="receive-message">Receive message</button>
+            <button type="button" class="remove-message" hidden>Remove message</button>
         </div>
     </section>
     <section class="message-box">
-      <h3 class="message-display"></h3>
+      <h3 class="message-display" hidden></h3>
       <img class="med-picture" src="./assets/meditate.svg" alt="Yellow person meditating">
     </section>
   </body>
